--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lib-flexible": "^0.3.2",
     "node-sass": "^4.12.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
